updates the index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 <div id="toptitle">
 <h1>Multi-Objective Evolutionary Algorithm Based on Decomposition (MOEA/D)</h1>
 </div>
+<div class="infoblock">
+<div class="blockcontent">
 <p>MOEA/D (Multi-objective evolutionary algorithm based on decomposition) is a general-purpose algorithm framework. It decomposes a multi-objective optimization problem into a number of single-objective optimization sub-problems (or simple multi-objective optimization problems) and then uses a search heuristic to optimize these sub-problems simultaneously and cooperatively.</p>
+</div></div>
+<h2>Purpose</h2>
+<p>In order to share and learn from other researchers from the MOEA/D community, to report up-to-date developments and results, and to discuss new ideas, the MOEA/D website provides an active <a href="mailto:moead@googlegroups.com" target=&ldquo;blank&rdquo;>mailing-list</a>, and advertises meetings and workshops held in major conferences from the field in a regular basis.</p>
 <h2>News and upcoming events</h2>
 <ul>
 <li><p><b>[Jan. 1, 2017]</b> Special Session <a href="Advances" target=&ldquo;blank&rdquo;>in Multiobjective Evolutionary Algorithms based on Decomposition</a>, <a href="CEC" target=&ldquo;blank&rdquo;>2017</a> (deadline: Jan 30, 2017)</p>
@@ -38,7 +43,7 @@ North Park Road, Exeter, UK, EX4 4QF<br />
 Tel: +(44) 0139-272-4557</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-03-15 13:48:10 GMT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2017-03-15 22:30:45 GMT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
