updates the declaration part

--- a/reference.html
+++ b/reference.html
@@ -24,10 +24,7 @@
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<ul>
-<li><p>This is an archive that records the papers on MOEA/D and its related approaches. They basically discussed the strengths, weaknesses, variants, generalizations, and applications. More references may be added by <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQw6U9-5aB4dHk5ixWVYoy_M_wWYHApnNKI3Qkis-YcL7qMg/viewform?c=0&amp;w=1" target=&ldquo;blank&rdquo;>request</a>.</p>
-</li>
-</ul>
+<p>This is an archive that records the papers on MOEA/D and its related approaches. They basically discussed the strengths, weaknesses, variants, generalizations, and applications. More references may be added by <a href="https://docs.google.com/forms/d/e/1FAIpQLSdQw6U9-5aB4dHk5ixWVYoy_M_wWYHApnNKI3Qkis-YcL7qMg/viewform?c=0&amp;w=1" target=&ldquo;blank&rdquo;>request</a>.</p>
 </div></div>
 <h2>2017</h2>
 <ol>
@@ -45,7 +42,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-03-15 22:30:45 GMT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2017-03-15 22:33:24 GMT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
